compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_sized_big_endian_unsigned.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 739
expression: "\npub fn go(x) {\n  let assert <<a:16-big-unsigned>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<a:16-big-unsigned>> = x
}


----- COMPILED JAVASCRIPT
import { makeError, bitArraySliceToInt } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  let a;
  if (x.bitSize === 16) {
    a = bitArraySliceToInt(x, 0, 16, true, false);
  } else {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 54, pattern_start: 29, pattern_end: 50 }
    )
  }
  return x;
}
