compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_sized_constant_pattern.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 514
expression: "\npub fn go(x) {\n  let assert <<1234:16, 123:8>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<1234:16, 123:8>> = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  if (!(
    x.bitSize >= 16 &&
    x.byteAt(0) === 4 && x.byteAt(1) === 210 &&
    x.bitSize === 24 &&
    x.byteAt(2) === 123
  )) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 51, pattern_start: 29, pattern_end: 47 }
    )
  }
  return x;
}
