compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__match_sized_little_endian_constant_pattern.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 714
expression: "\npub fn go(x) {\n  let assert <<1234:16-little>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  let assert <<1234:16-little>> = x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go(x) {
  if (!(x.bitSize === 16 && x.byteAt(0) === 210 && x.byteAt(1) === 4)) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x, start: 18, end: 51, pattern_start: 29, pattern_end: 47 }
    )
  }
  return x;
}
